tests/parsing/invalid/parameter_order/bus.fbd
config my_config(width=10, foo)
	width = width
